2012-01-21 Roman
- FIX:DB, Archives: Call module's service call function perSYSCall() is fixed.
- Archive.FSArch: Checking for archivators is removed from independent task to service call function.
- Transport.Serial: Checking for output transports is removed from independent task to service call function.


2012-01-19 Roman
- DAQ.ModBus: Maximum request block size is made optional for a controller object.
    Comments support is added into attributes configuration list, for standard parameter type.


2012-01-18 Roman
- DAQ.ModBus: Transaction ID random generation is added to ModBus/TCP requests packages.
- SYS: Some status is added to result build configuration table.


2012-01-17 Roman
- SYS: Check for use libraries "libintl" and "libiconv" is added.
    Function clock_nanosleep() some replaced by nanosleep().
    Symbol '%' using for self is fixed into string "Last: %s. Load: %3.1f%% (%s from %s)", detected on uCLibc-0.9.32.1.
- FIX:Transport.SSL: Dependency to library "libcrypto" is added for fix build and execute on uCLibc-0.9.32.1.
- FIX:UI.WebVision: Check for close old sessions need is removed from independent task to service call function.
    Deadlock resource is removed, detect on uCLibc-0.9.32.1.


2012-01-14 Roman
- FIX:UI.Vision: Early child widgets clear on its parent widget delete is made for prevent access to mostly freeing parent widget
    on child widget remove.


2012-01-12 Roman
- FIX:UI.Vision: Crash on maximize runtime window for no one openned window project is fixed.
- FIX:UI.QTCfg: Crash on double mouse click processing in list items element which allowed for goto other page
    with the tab also present into new page.
- FIX:SYS: All start scripts is fixed for core dumps processing.


2012-01-10 Roman
- Archive: User API function SYS.Archive.messPut() for place messages direct to archive for need time and other properties
    is added.


2012-01-10 Maxim